Devfeat(*) DevFest branding added

--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,13 @@
         <base href="/" />
 
         <meta property="og:title" content="DevFest Medellin 2019">
-        <meta property="og:description" content="A agreat event to learn and share knowledge about node.js in Medellín.">
-        <meta property="og:image" content="https://nodeweek.org/assets/img/node-week-logo.svg">
-        <meta property="og:url" content="https://nodeweek.org">
+        <meta property="og:description" content="A agreat event to learn and share knowledge about Google technologies in Medellín.">
+        <meta property="og:image" content="https://nodeweek.org/assets/img/gdg_med_logo.svg">
+        <meta property="og:url" content="https://devfestmed.dev">
 
         <meta property="twitter:title" content="DevFest Medellin 2019">
-        <meta property="twitter:description" content="A agreat event to learn and share knowledge about node.js in Medellín.">
-        <meta property="twitter:image" content="https://nodeweek.org/assets/img/node-week-logo.svg">
+        <meta property="twitter:description" content="A agreat event to learn and share knowledge about Google technologies in Medellín.">
+        <meta property="twitter:image" content="https://nodeweek.org/assets/img/gdg_med_logo.svg">
         <meta property="twitter:card" content="summary_large_image">
 
         <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -37,7 +37,7 @@
     <body>
         <app-root>
             <div class="loadapp">
-                <img src="/assets/img/lfdev-logo.png" alt="Cargando JSWeek" />
+                <img src="/assets/img/GDGMedellin.png" alt="Cargando GDG Medellin" />
             </div>
         </app-root>
     </body>
